# UnionNoise

./: .gitignore  CHANGELOG.md  code-reference.md  union-noise-prd-new.md  union-noise-prd-v3.md  union-noise-prd-v4.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  run.py
backend/app/: main.py
backend/app/calculation/: connection.py  constants.py  foundation.py  lifting.py  report.py  steel.py  subframe.py  wind.py
backend/app/data/: bolt_library.json  chs_library.json  connection_library.json  parts_library.json  parts_library_S275.json  parts_library_S355.json  rebar_library.json  shelter_factor_table.json
backend/app/routers/: calculate.py  extract.py  optimize_section.py  report.py  select_section.py  suppliers.py  wind_and_select.py
backend/app/services/: llm.py  section_retrieval.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  extract.ts
frontend/src/components/: Layout.tsx  ProjectCard.tsx  Sidebar.tsx
frontend/src/hooks/: usePdfRenderer.ts  useProjects.ts  useStepGuard.ts
frontend/src/pages/: MasterDataPage.tsx  OverviewPage.tsx  ProjectsLibraryPage.tsx
frontend/src/steps/: Step1.tsx  Step2.tsx  Step3.tsx  Step4.tsx  Step5.tsx  Step6.tsx
frontend/src/store/: projectStore.ts
frontend/src/types/: index.ts
